Fri Sep 27 22:53:15 GMT 2013  Olly Betts <olly@survex.com>

	* api/omenquire.cc,include/xapian/enquire.h,tests/api_anydb.cc: Fix
	  backwards compatibility get_eset() wrapper to allow for the optional
	  parameters which were supported before.  Also, just inline it from
	  the API header.

Fri Sep 27 11:19:50 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* api/omenquire.cc,api/omenquireinternal.h,expand/,
	  include/xapian/enquire.h,tests/api_anydb.cc: Add support for the Bo1
	  query expansion scheme.

Thu Sep 26 04:11:49 GMT 2013  Olly Betts <olly@survex.com>

	* tests/api_weight.cc: Don't pass integer arguments to log() to avoid
	  ambiguity errors with some compilers.  (fixes #627)

Thu Sep 26 02:02:24 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/,backends/chert/,backends/dbcheck.cc: Fix database
	  consistency checking to always open all the tables at the same
	  revision, which could lead to false errors being reported after
	  a commit interrupted by the process being killed or the machine
	  crashing.  Reported by Joey Hess in http://bugs.debian.org/724610

Wed Sep 25 02:21:29 GMT 2013  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add testcase for FieldProcessor on boolean
	  prefix with quoted contents.

Wed Sep 25 02:16:55 GMT 2013  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix comment typo.

Wed Sep 25 02:13:20 GMT 2013  Olly Betts <olly@survex.com>

	* api/: Split QueryVector into a template SmallVector class and then
	  'typedef SmallVector<Query> QueryVector;', as it would be good to
	  use the same approach for Database internals.

Tue Sep 24 09:59:05 GMT 2013  Olly Betts <olly@survex.com>

	* .gitignore,xapian-core.spec.in: Update two references to .tar.gz
	  files.

Tue Sep 24 09:54:42 GMT 2013  Olly Betts <olly@survex.com>

	* docs/install.rst: Fix typo (bogus extra 'and');

Tue Sep 24 09:54:01 GMT 2013  Olly Betts <olly@survex.com>
