@@ -1,33 +1,40 @@
-// version.cc: Return library version information
-//
-// Copyright (C) 2005,2006,2008 Olly Betts
-//
-// This program is free software; you can redistribute it and/or modify
-// it under the terms of the GNU General Public License as published by
-// the Free Software Foundation; either version 2 of the License, or
-// (at your option) any later version.
-//
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU General Public License for more details.
-//
-// You should have received a copy of the GNU General Public License
-// along with this program; if not, write to the Free Software
-// Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
+/** @file version.cc
+ * @brief Library version information
+ */
+/* Copyright (C) 2013 Olly Betts
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to
+ * deal in the Software without restriction, including without limitation the
+ * rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+ * sell copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in
+ * all copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+ * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+ * IN THE SOFTWARE.
+ */
 
 #include <config.h>
 
 #include "xapian.h"
 
+static const struct Xapian::Internal::vinfo version_info = {
+    XAPIAN_MAJOR_VERSION,
+    XAPIAN_MINOR_VERSION,
+    XAPIAN_REVISION,
+    XAPIAN_VERSION
+};
+
 namespace Xapian {
-
-const char * version_string() { return XAPIAN_VERSION; }
-
-int major_version() { return XAPIAN_MAJOR_VERSION; }
-
-int minor_version() { return XAPIAN_MINOR_VERSION; }
-
-int revision() { return XAPIAN_REVISION; }
-
+namespace Internal {
+const struct vinfo * get_vinfo_() { return & version_info; }
+}
 }
