@@ -27,10 +27,22 @@
 #include <xapian.h>
 
 #include "apitest.h"
+#include "str.h"
 #include "testsuite.h"
 #include "testutils.h"
 
 using namespace std;
+
+// Check the version functions give consistent results.
+DEFINE_TESTCASE(version1, !backend) {
+    string version = str(Xapian::major_version());
+    version += '.';
+    version += str(Xapian::minor_version());
+    version += '.';
+    version += str(Xapian::revision());
+    TEST_EQUAL(Xapian::version_string(), version);
+    return true;
+}
 
 // Regression test: various methods on Database() used to segfault or cause
 // division by 0.  Fixed in 1.1.4 and 1.0.18.  Ticket#415.
